...
        <android.support.design.widget.AppBarLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:navigationIcon="@drawable/ic_baseline_arrow_back_24px"
                    app:contentInsetStartWithNavigation="0dp"
                    app:contentInsetStart="0dp"
...
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:orientation="vertical"
                              android:layout_weight="1"
                              android:layout_marginLeft="10dp"
                              android:layout_marginRight="10dp">
                    <android.support.design.widget.TextInputLayout
                            android:id="@+id/title_textLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Title"
                            android:padding="20dp">

                        <android.support.design.widget.TextInputEditText
                                android:id="@+id/title_editText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColorHint="@color/colorPrimary"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
...
                               app:srcCompat="@drawable/ic_baseline_photo_size_select_actual_24px"
                               android:layout_marginLeft="22dp"
                               android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>
                </LinearLayout>
                <Button
                        android:id="@+id/submit_button"
                        android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="submit"/>

            </LinearLayout>

        </ScrollView>


...
