<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/appbar"
            android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textColor="@android:color/white"
                      android:textStyle="bold"
                      android:id="@+id/toolbar_title"
                      android:layout_weight="1"
                      android:maxLines="1"
                      android:ellipsize="end"
                      android:layout_marginRight="10dp"
                      android:textSize="18sp"
                      android:text="SmartLog"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textColor="@android:color/white"
                      android:textSize="18sp"
                      android:id="@+id/help"
                      android:layout_marginRight="20dp"
            android:text="Help"/>
            </LinearLayout>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.SwipeRefreshLayout android:layout_width="match_parent"
                                                  android:layout_height="match_parent" android:id="@+id/swipe_refresh"
                                                  android:layout_below="@+id/appbar">
    <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </android.support.v4.widget.SwipeRefreshLayout>


    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/fab_margin"
            app:fabCustomSize="50dp"
            app:srcCompat="@drawable/ic_baseline_add_24px"/>

    <ProgressBar android:layout_width="30dp" android:layout_height="30dp" android:id="@+id/progress_bar"
                 android:visibility="gone"/>

    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:gravity="center"
                  android:id="@+id/empty_state_layout"
                  android:visibility="gone"
                  android:layout_centerInParent="true">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:layout_centerInParent="true"

                   app:srcCompat="@drawable/ic_round_filter_none2_24px"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_marginTop="5dp"
                  android:id="@+id/empty_textview"
        android:text="No records found"/>
    </LinearLayout>
</RelativeLayout>
