...
                android:layout_height="wrap_content"
                android:hint="Log Book Title"
                android:textColorHint="@color/colorPrimary"/>
    </android.support.design.widget.TextInputLayout>

    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/create_book_button"
    android:text="Create Log Book"
    android:layout_margin="10dp"/>
    </LinearLayout>

    <ProgressBar android:layout_width="20dp" android:layout_height="20dp" android:id="@+id/progress_bar" android:layout_centerInParent="true"
    android:visibility="gone"/>
</RelativeLayout>
