...
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical">

    <RelativeLayout
            android:id="@+id/container_layout"
            android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical"
            android:paddingTop="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp">
...
                  android:text="25 Feb"
                  android:textSize="14sp"
                  android:layout_gravity="right"/>

        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:layout_alignParentRight="true"
                   android:id="@+id/more_action_view"
                   android:layout_marginTop="5dp"
        app:srcCompat="@drawable/ic_baseline_more_vert_24px"/>
    </RelativeLayout>
</LinearLayout>
